k8s/dev/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoforge-clusterip
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: autoforge-app
  ports:
    - port: 80
      targetPort: 5000
