k8s/dev/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoforge-lb
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: autoforge-app
  ports:
    - port: 80
      targetPort: 5000
